--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   java-maven-app:
-    image: aborzymdocker/demo-app:latest
+    image: ${IMAGE}
     ports:
       - 8080:8080
   postgres:
